k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: java-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: java-app
